2001-09-03  Bruno Haible  <haible@clisp.cons.org>

	* x-c.h (EXTENSIONS_C, SCANNERS_C): Remove extraneous commas.
	* x-po.h (EXTENSIONS_PO, SCANNERS_PO): Likewise.

2001-09-11  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c: Set msgstr_prefix to "", not NULL.
	Reported by Martin Quinson <Martin.Quinson@ens-lyon.fr>.

2001-09-10  Bruno Haible  <haible@clisp.cons.org>

	* msgattrib.c (main): Call set_program_name instead of assigning
        program_name directly.
	* msgcat.c (main): Likewise.
	* msgconv.c (main): Likewise.
	* msgen.c (main): Likewise.
	* msgexec.c (main): Likewise.
	* msggrep.c (main): Likewise.
	* msguniq.c (main): Likewise.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* msgattrib.c: New file.
	* Makefile.am (bin_PROGRAMS): Add msgattrib.
	(msgattrib_SOURCES, msgattrib_LDADD): New variables.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* format-lisp.c (gcd): Remove function. Include "gcd.h" instead.

2001-09-03  Bruno Haible  <haible@clisp.cons.org>

	* xgettext.c (usage): Mention ObjectiveC and Java.
	* xgettext.h (substring_match): New declaration.
	* Makefile.am (x-java.c): New rule. Automake's .l.c rules doesn't
	work if $(LEX) is defined to ":".

2001-09-03  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.h: New file.
	* x-java.l: New file.
	* xgettext.c: Include x-java.h.
	(substring_match): New variable.
	(long_options): Add --keyword-substring.
	(main): For -k, also call x_java_keyword. Treat --keyword-substring.
	(scan_java_file): New function.
	(language_to_scanner): Add Java rule. Remove preliminary Java rule.
	(extension_to_language): Add Java rule.
	* Makefile.am (xgettext_SOURCES): Add x-java.l.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* read-mo.h: New file.
	* read-mo.c: New file, extracted from msgunfmt.c.
	(read_mo_file): Require non-null message list argument. Return void.
	* msgunfmt.c (endian, read32, seek32, string32, read_mo_file): Move to
	read-mo.c.